--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/four_numbers.exe",
+            "program": "${workspaceRoot}/target/debug/pipes.exe",
             "args": [],
             "stopAtEntry": false,
             //"cwd": "${workspaceRoot}",
