--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceRoot}/target/debug/pipes.exe",
-            "args": "${workspaceRoot}/target/debug/Puzzle0.csv",
+            "args": "${workspaceRoot}/target/debug/Puzzle0a.csv",
             "stopAtEntry": false,
             //"cwd": "${workspaceRoot}",
             "cwd": "${workspaceRoot}\\target\\debug\\",
